--- a/0x02-i18n/templates/0-index.html
+++ b/0x02-i18n/templates/0-index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 	<head>
-		<title>{{ title }}</title>
+		<title>Welcome to Holberton</title>
 	</head>
 	<body>
-		<h1>{{ header }}</h1>
+		<h1>Hello world</h1>
 	</body>
 </html
